--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
 
 @media screen and (max-width: 1440px) {
   html {
-    font-size: 50%;
+    font-size: 45%;
   }
 }
 
@@ -31,7 +31,7 @@ html {
 
 @media only screen and (max-width: 768px) {
   html {
-    font-size: 25%;
+    font-size: 30%;
   }
 }
 
@@ -51,6 +51,11 @@ section {
 }
 body {
   line-height: 1;
+  background-color: #3c4048;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 ol,
 ul {
